# swiper

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
artifact/: README.md  _simulate.py  run_analysis.py  run_benchmark_evals.py  run_mispredict_strategy.py  run_predictor_accuracy.py  run_pymatching_latencies.py  run_reaction_time_evals.py
benchmarks/: benchmark_circuits.py  benchmark_info.csv  cirq_to_ls.py  qrom.py
doc/: getting_started.ipynb
experiments/: msd-15-1.py
notebooks/: 00_window_test.ipynb  01_simple_evaluation.ipynb  02_benchmark_compilation.ipynb  02_benchmark_testing.ipynb  02_qrom_benchmark.ipynb  03_decoder_distribution.ipynb  03_lsqecc_testing.ipynb  03_qrom_test.ipynb  04_predictor_accuracy.ipynb  04_simple_benchmarks.ipynb  05_benchmark_test.ipynb  05_process_slurm_data.ipynb  05_slurm_data_benchmarks.ipynb  05_slurm_data_poison.ipynb  05_slurm_data_reaction_times.ipynb  05_slurm_data_sensitivity.ipynb  06_decoder_dists.ipynb  06_teraquop_distance.ipynb  07_benchmark_stats.ipynb  07_teraquop_distance.ipynb  08_instruction_counts.ipynb  08_slurm_data_reaction_time.ipynb  09_predictor_data.ipynb  09_slurm_data_benchmarks.ipynb  10_bandwidth_power.ipynb  11_decoder_distribution.ipynb  11_fpga_costs.ipynb
slurm/: run_simulation.py  submit_jobs.py
swiper/: decoder_manager.py  dep_graph.py  device_manager.py  lattice_surgery_schedule.py  plot.py  predictor.py  schedule_experiments.py  simulator.py  surfaces.py  window_builder.py  window_manager.py  window_test.ipynb
swiper2/: decoder_manager.py  device_manager.py  (+9 more)
(+51666 files in other folders)
