[tool.poetry]
name = "swiper"
version = "0.1.0"
description = ""
authors = ["Joshua Viszlai <viszlai@uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymatching = "^2.2.1"
ipykernel = "^6.29.5"
pytest = "^8.3.3"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
