[tool.poetry]
name = "swiper"
version = "0.1.0"
description = ""
authors = ["Joshua Viszlai <viszlai@uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
pymatching = "^2.2.1"
ipykernel = "^6.29.5"
pytest = "^8.3.3"
tqdm = "^4.66.5"
dill = "^0.3.9"
qualtran = "^0.4.0"
pyLIQTR = "^1.3.0"
tweedledum = {git = "https://github.com/Alice-Bob-SW/tweedledum.git"}
parse = "^1.20.2"
pyscf = "^2.7.0"
openfermionpyscf = "^0.5"
qiskit = "^1.2.4"
stim = "^1.14.0"
sinter = "^1.14.0"
retry = "^0.9.2"
pandas = "^2.2.3"
adjusttext = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
